[package]
name = "pangu2"
version = "0.1.1"
edition = "2021"
authors = ["attila-lin <linyiyu1992@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "readme.md"
documentation = "https://docs.rs/pangu2"
repository = "https://github.com/attila-lin/pangu2"
categories = ["text-processing"]
keywords = ["pangu", "spacing"]
description = """
Paranoid text spacing for good readability, to automatically insert
whitespace between CJK (Chinese, Japanese, Korean) and half-width
characters (alphabetical letters, numerical digits and symbols).
"""

[dependencies]
once_cell = "1.18.0"
regex = "1.8.4"
lazy-regex = "3.1.0"
const_format = "0.2.31"